# 2025-rs-todoapp

./: Cargo.toml  README.md
todo-list-backend/: Cargo.toml
todo-list-backend/src/: main.rs
todo-list-cli/: Cargo.toml
todo-list-cli/src/: main.rs  todo_client.rs
todo-list-common/: Cargo.toml
todo-list-common/src/: lib.rs
todo-list-frontend/: Cargo.toml
todo-list-frontend/src/: main.rs
