[package]
name = "todo-list-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.33"
eframe = { version = "0.33", features = ["wgpu", "glow"] }
egui_extras = { version = "0.33" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
chrono = { version = "0.4", features = ["serde"] }
todo-list-common = { path = "../todo-list-common" }